# ParkrunTales

./: .env.example  .replit  DEPLOYMENT.md  app.py  config.py  firebase_rules.json  main.py  models.py  pyproject.toml  replit.md  replit.nix  requirements-external.txt  test_firebase_security.py
.github/workflows/: deploy.yml
deployment/: parkrun-story.service
static/css/: custom.css
static/js/: main.js
templates/: base.html  index.html  story.html
