[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "firebase-admin>=6.6.0",
    "firecrawl>=1.12.0",
    "firecrawl-py>=1.11.1",
    "flask>=3.1.0",
    "google-generativeai>=0.8.4",
    "gunicorn>=23.0.0",
    "markdown2>=2.5.3",
    "pillow>=11.1.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "trafilatura>=2.0.0",
]
